--- a/trunk/kgui/CMakeLists.txt
+++ b/trunk/kgui/CMakeLists.txt
@@ -15,6 +15,7 @@ set(
 	hub.cpp
 	usermodel.cpp
 	userinfo.cpp
+	clientthreadhub.cpp
 )
 
 kde4_add_ui_files(
@@ -28,8 +29,10 @@ kde4_add_ui_files(
 include_directories( ${KDE4_INCLUDES} ${RUFUSDC_SOURCE_DIR} )
 link_directories( ${RUFUSDC_BINARY_DIR}/rufusdc )
 
+add_definitions( -DQT_NO_KEYWORDS )
 set( CMAKE_CXX_FLAGS -fexceptions ) # ugly and non-portable. I liked the qmake's way of doing this better
 set( CMAKE_CXX_FLAGS -O0 )
+
 kde4_add_executable(kgui ${SOURCES})
 
 
